First pass at tab navigation wrap prevention

--- a/css/pagebuilder.css
+++ b/css/pagebuilder.css
@@ -117,11 +117,15 @@
 #pagebuilder-tertiary-nav a.selected {
 	font-weight: bold;
 }
- */
+*/
+#pagebuilder-tertiary-nav {
+	overflow: scroll;
+}
 #pagebuilder-tertiary-nav ul {
 	list-style: none;
 	padding: 0;
 	margin: 0;
+	white-space: nowrap;
 }
 #pagebuilder-tertiary-nav li {
 	display: inline-block;
@@ -215,6 +219,7 @@
 		margin: 0 0 2em 0;
 	}
 	.pagebuilder-row .pagebuilder-column {
+		float: none !important;
 		margin: 0;
 		width: 100% !important; /* Necessary in order to override inline styling */
 	}
@@ -258,12 +263,15 @@
 		position: relative;
 	}
 	#pagebuilder-tertiary-nav ul::after {
-		content: "☰";
-		position: absolute;
-		top: 8px;
-		right: 15px;
-		z-index: 2;
+		content: "\F501";
+		font-family: Spine-Icons;
 		pointer-events: none;
+		position: absolute;
+		right: 1em;
+		top: 0.6em;
+		z-index: 2;
+		-moz-osx-font-smoothing: grayscale;
+		-webkit-font-smoothing:  antialiased;
 	}
 	#pagebuilder-tertiary-nav li {
 		display: block;
